Relax card type handling.

Chrome does not yet differentiate between the various `supportedTypes`
['credit', 'debit', 'prepaid'] in `PaymentMethodData.data`. To warn
developers of this behavior, we now allow `supportedTypes` with 1 or 2
arguments and show a warning message in developer console instead:
"Cannot yet distinguish credit, debit, and prepaid cards."

BUG=686119

Review-Url: https://codereview.chromium.org/2659083003
Cr-Commit-Position: refs/heads/master@{#446996}

Former-commit-id: 06a0d2103e3207a176f4b3b98537106854a4ec00